# pharma-teller

./: compare_with_lora_notebook.py  embed_news.py  main_ddp.py  main_fsdp.py  prototype_training.py  prototype_training_notebook.py  pyproject.toml  reference_1B.py  tokenizer.py
