[project]
name = "pharma-teller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "packaging>=25.0",
    "peft>=0.18.0",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
]
